Replace some outdated functions